tests/ui/lifetimes/ice-cross-crate-defid.stderr
error: lifetime may not live long enough
  --> $DIR/ice-cross-crate-defid.rs:7:5
   |
LL | fn test<'a, T: ExternalTrait>(a: &'a mut T) -> impl std::future::Future<Output = ()> + 'static {
   |         -- lifetime `'a` defined here
LL |     a.build_request()
   |     ^^^^^^^^^^^^^^^^^ returning this value requires that `'a` must outlive `'static`
   |
help: consider changing `impl Future<Output = ()> + 'static`'s explicit `'static` bound to the lifetime of argument `a`
   |
LL - fn test<'a, T: ExternalTrait>(a: &'a mut T) -> impl std::future::Future<Output = ()> + 'static {
LL + fn test<'a, T: ExternalTrait>(a: &'a mut T) -> impl std::future::Future<Output = ()> + 'a {
   |
help: alternatively, add an explicit `'static` bound to this reference
   |
LL - fn test<'a, T: ExternalTrait>(a: &'a mut T) -> impl std::future::Future<Output = ()> + 'static {
LL + fn test<'a, T: ExternalTrait>(a: &'static mut T) -> impl std::future::Future<Output = ()> + 'static {
   |

error: aborting due to 1 previous error
